Fix missing patch module for cli
Signed-off-by: TheSilkMiner <thesilkminer@outlook.com>